@@ -1,3 +1,8 @@
+2009-04-29  Dennis Cranston  <dennis_cranston@yahoo.com>
+
+	* gsearchtool-callbacks.c (build_popup_menu_for_file):  
+	Clean up the code.
+	
 2009-04-28  Dennis Cranston  <dennis_cranston@yahoo.com>
 
 	* gsearchtool-callbacks.c (build_popup_menu_for_file):  
